--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@line/liff": "2.25.1",
+    "japan-postal-code": "^0.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "use-debounce": "^10.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/japan-postal-code": "^0.2.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "@vitejs/plugin-react": "4.3.4",
